Fix navbar on mobile + simplify code for navbar. Started adding text + padding for text

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,9 @@ body, html {
     margin: 0;
     overflow-x: hidden;
     background-color: #FFFFF0;
+    @media (width > 1000px) {
+        padding-top: 2vw;
+    }
 }
 
 /* Navbar */
@@ -20,18 +23,28 @@ ul {
     font-weight: 500;
     font-family: 'Dosis', sans-serif;
     transition: font 0.4s ease, background-color 0.4s ease;
-    @media (width <1000px) {
+    @media (width < 1000px) {
         display: block;
         list-style-type: none;
         margin: 0;
         padding: 0;
-        width: 32vw;
+        width: 0;
         background-color: rgba(173, 163, 164, 0.5);
         position: fixed;
         height: 100%;
         overflow: hidden;
         font-size: 5vw;
         transition: width 0.2s ease;
+    }
+}
+
+#open-nav {
+    display: none;
+}
+
+@media (width < 1000px) {
+    #open-nav:checked ~ ul {
+        width: 32vw;
     }
 }
 
@@ -65,8 +78,21 @@ li a:hover:not(.active) {
     transition: background-color 0.6s ease;
 }
 
-.morebtn {
+ul.shrink {
+    background-color: transparent;
+    font-size: 25px;
+    width: 100%;
+    height: auto;
+    li a {
+        padding: 0.6vw 1.6vw;
+        color: black;
+    }
+}
+
+.nav-btn {
+    display: none;
     @media (width < 1000px){
+        display: block;
         background-color: transparent;
         color: rgb(126, 124, 124);
         position: fixed; right: 0;
@@ -87,3 +113,10 @@ li a:hover:not(.active) {
     }
 }
 /* Navbar */
+
+div.text{
+    
+}
+p {
+    font-size: 20px;
+}
